--- a/kubernetes/my-python-deployment.yaml
+++ b/kubernetes/my-python-deployment.yaml
@@ -27,10 +27,8 @@ spec:
           value: "/app/certificates/wethercenter.crt"
         - name: KEY_FILE
           value: "/app/certificates/wethercenter.key"
-        volumeMounts:
-        - name: certs
-          mountPath: /app/certificates
-      volumes:
-      - name: certs
-        secret:
-          secretName: my-python-certificates
+        resources:
+          requests:
+            cpu: 50m
+          limits:
+            cpu: 100m
