--- a/kubernetes/my-python-deployment.yaml
+++ b/kubernetes/my-python-deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: my-python
         image: tomafcsb/my-python-web-server
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
         - containerPort: 443
