--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ deploy:
     - kubectl create secret generic weather-secret --from-literal=API_KEY="$API_KEY" --dry-run=client -o yaml | kubectl apply -f -
     - sed "s|__IMAGE_NAME__|$IMAGE_NAME|g" kubernetes/my-python-deployment.yaml | kubectl apply -f -
     - kubectl apply -f kubernetes/my-python-hpa.yaml
-    - kubectl apply -f kubernetes/my-python-do-lb-service.yaml
+   # - kubectl apply -f kubernetes/my-python-do-lb-service.yaml
     - kubectl rollout restart deployment my-python
     - kubectl get pods
     - kubectl get events
